--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 # 3.21.0 (2025-XX-XX)
 
- * n/a
+ * Introduce operator classes to describe operators provided by extensions instead of arrays
 
 # 3.20.0 (2025-02-13)
 
